// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardImage renders with base props 1`] = `
<img
  alt="test"
  className="lab-card-image"
  src="test"
/>
`;

exports[`CardImage renders with isOverflowed 1`] = `
<img
  alt="test"
  className="lab-card-image lab-card-image--overflowed"
  src="test"
/>
`;
